<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <!-- Include Main Header Bar -->


    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/headcompanyname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/head_comp_name"
                    android:textColor="#000000"
                    android:textSize="15dip"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/headaddress1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/head_address1"
                    android:textColor="#000000"
                    android:textSize="15dip"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/headaddress2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/head_address2"
                    android:textColor="#000000"
                    android:textSize="15dip"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/headteleno"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/head_comp_tele"
                    android:textColor="#000000"
                    android:textSize="15dip"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/headwebsite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/head_comp_website"
                    android:textColor="#000000"
                    android:textSize="15dip"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/heademail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/head_comp_email"
                    android:textColor="#000000"
                    android:textSize="15dip"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/docheadLine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:maxLines="1"
                    android:text="@string/printheadingline"
                    android:textColor="#000000"
                    android:textSize="15dip" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/docheadtile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1.5"
                    android:maxLines="1"
                    android:text="Expense"
                    android:textColor="#000000"
                    android:textSize="15dip"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/docheadtitle1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text=""
                    android:textColor="#000000"
                    android:textSize="15dip" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="28dip"
                android:layout_marginTop="0dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/transdocrefno"
                    android:layout_width="0.0dip"
                    android:layout_height="fill_parent"
                    android:layout_weight="1.5"
                    android:text="@string/refno"
                    android:textColor="#040d19"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/transdocrefnocol"
                    android:layout_width="0.0dip"
                    android:layout_height="fill_parent"
                    android:layout_weight="0.2"
                    android:text=":"
                    android:textColor="#040d19"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/printrefno"
                    android:layout_width="0.0dip"
                    android:layout_height="fill_parent"
                    android:layout_weight="3.0"
                    android:hint="@string/refno"
                    android:textColor="#040d19"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="28dip"
                android:layout_marginTop="0dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/transdocdate"
                    android:layout_width="0.0dip"
                    android:layout_height="fill_parent"
                    android:layout_weight="1.5"
                    android:text="@string/date"
                    android:textColor="#040d19"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/transdocdatecol"
                    android:layout_width="0.0dip"
                    android:layout_height="fill_parent"
                    android:layout_weight="0.2"
                    android:text=":"
                    android:textColor="#040d19"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/printdate"
                    android:layout_width="0.0dip"
                    android:layout_height="fill_parent"
                    android:layout_weight="3.0"
                    android:hint="@string/date"
                    android:textColor="#040d19"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:id="@+id/docheadLine1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:maxLines="1"
                android:text="@string/printheadingline"
                android:textColor="#000000"
                android:textSize="15dip" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="28dip"
                android:layout_marginTop="0dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/transdoctextba"
                    android:layout_width="0.0dip"
                    android:layout_height="fill_parent"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:text="Expense Name"
                    android:textColor="#040d19"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/printcaseqty"
                    android:layout_width="0.0dip"
                    android:layout_height="fill_parent"
                    android:layout_weight="1.2"
                    android:gravity="center"
                    android:text="(RS)"
                    android:textColor="#040d19"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:id="@+id/docheadLine2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:maxLines="1"
                android:text="@string/printheadingline"
                android:textColor="#000000"
                android:textSize="15dip" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:orientation="horizontal">

                <ListView
                    android:id="@+id/dmstockloadingdetlist"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="#569eff"
                    android:divider="#8b8b83"
                    android:dividerHeight="1dp"
                    android:drawSelectorOnTop="false"></ListView>
            </LinearLayout>

            <!--            <TextView -->
            <!--                 android:id="@+id/docheadLine" -->
            <!--                 android:layout_width="wrap_content" -->
            <!--                 android:layout_height="wrap_content" -->
            <!--                 android:layout_gravity="center" -->
            <!--                 android:maxLines="1" -->
            <!--                 android:text="@string/printheadingline" -->
            <!--                 android:textColor="#000000" -->
            <!--                 android:textSize="15dip" /> -->

            <TextView
                android:id="@+id/docheadLine3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:maxLines="1"
                android:text="@string/printheadingline"
                android:textColor="#000000"
                android:textSize="15dip" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="28dip"
                android:layout_marginTop="0dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/transdoctextba4"
                    android:layout_width="0.0dip"
                    android:layout_height="fill_parent"
                    android:layout_weight="3"
                    android:text="Total Amount :"
                    android:textColor="#040d19"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/printtotvalue"
                    android:layout_width="0.0dip"
                    android:layout_height="fill_parent"
                    android:layout_weight="1.2"
                    android:gravity="center"
                    android:text="(RS)"
                    android:textColor="#040d19"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>